play routine and save inheritance

--- a/Examples/FrozenLake/reinforcement-learning-frozen-lake.ipynb
+++ b/Examples/FrozenLake/reinforcement-learning-frozen-lake.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-10T20:48:22.982778Z",
-     "start_time": "2022-11-10T20:48:22.059584Z"
+     "end_time": "2022-11-11T19:47:36.063352Z",
+     "start_time": "2022-11-11T19:47:35.187966Z"
     }
    },
    "outputs": [],
@@ -25,13 +25,13 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-10T20:48:24.105437Z",
-     "start_time": "2022-11-10T20:48:23.053543Z"
+     "end_time": "2022-11-11T19:47:37.851006Z",
+     "start_time": "2022-11-11T19:47:36.792122Z"
     }
    },
    "outputs": [],
    "source": [
-    "sys.path.append('../')\n",
+    "sys.path.append('../../')\n",
     "from RLFramework.Agents import *"
    ]
   },
@@ -40,8 +40,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-10T20:48:24.216287Z",
-     "start_time": "2022-11-10T20:48:24.187541Z"
+     "end_time": "2022-11-11T19:47:37.881757Z",
+     "start_time": "2022-11-11T19:47:37.866796Z"
     }
    },
    "outputs": [],
@@ -65,34 +65,9 @@
     "    reward=None\n",
     "    \n",
     "    \n",
-    "    #TODO create total reward\n",
-    "    reward_list = []\n",
+    "    reward_list = agent.train(env, n_episodes=n_episodes, max_timesteps=n_timesteps,\n",
+    "                              checkpoint_path=None, warm_start_weights=None, verbatim=1, render_every=None)\n",
     "    \n",
-    "    #training of agent\n",
-    "    for episode in range(n_episodes):\n",
-    "        state, info = env.reset()\n",
-    "        total_reward = 0\n",
-    "        done = False\n",
-    "        for timestep in range(n_timesteps):\n",
-    "            \n",
-    "            #plt.imshow(env.render());\n",
-    "            #print(observation)\n",
-    "            \n",
-    "            if done:\n",
-    "                #print(\"Episode finished after {} timesteps\".format(timestep + 1))\n",
-    "                break\n",
-    "            \n",
-    "            action = agent.make_action(state, exploit_only=False)\n",
-    "            #print(agent.greedy_eps)\n",
-    "            observation, reward, done, truncated, info = env.step(action)\n",
-    "            agent.update_policy(state, observation, reward, action, episode, timestep)\n",
-    "            state = observation\n",
-    "            \n",
-    "            # sum up the number of rewards after n episodes\n",
-    "            total_reward += reward\n",
-    "           \n",
-    "        \n",
-    "        reward_list.append(total_reward)\n",
     "    #print(np.cumsum(reward_list)/(np.arange(n_episodes) + 1))\n",
     "    plt.figure(figsize=(14,10))\n",
     "    plt.plot((np.arange(n_episodes) + 1), np.cumsum(reward_list)/(np.arange(n_episodes) + 1))\n",
@@ -106,8 +81,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-10T20:48:24.309504Z",
-     "start_time": "2022-11-10T20:48:24.295514Z"
+     "end_time": "2022-11-11T19:47:40.035567Z",
+     "start_time": "2022-11-11T19:47:40.022570Z"
     }
    },
    "outputs": [],
@@ -120,35 +95,10 @@
     "    \n",
     "    n_states = env.observation_space.n\n",
     "    n_actions = env.action_space.n\n",
-    "    \n",
-    "    reward=None\n",
-    "    \n",
-    "    #TODO create total reward\n",
-    "    reward_list = []\n",
-    "    \n",
-    "    # playing\n",
-    "    for episode in range(n_episodes):\n",
-    "        state, info = env.reset()\n",
-    "        total_reward = 0\n",
-    "        done = False\n",
-    "        for timestep in range(n_timesteps):\n",
-    "            \n",
-    "            env.render()\n",
-    "            #print(observation)\n",
-    "           \n",
-    "            if done:\n",
-    "                #print(\"Episode finished after {} timesteps\".format(timestep + 1))\n",
-    "                break\n",
-    "            \n",
-    "            action = agent.make_action(state, exploit_only=True)\n",
-    "            #print(agent.greedy_eps)\n",
-    "            observation, reward, done, truncated, info = env.step(action)\n",
-    "            state = observation\n",
-    "            \n",
-    "            # sum up the number of rewards after n episodes\n",
-    "            total_reward += reward\n",
     "        \n",
-    "        reward_list.append(total_reward)\n",
+    "    reward_list = agent.play(env, n_episodes=n_episodes, max_timesteps=n_timesteps,\n",
+    "                             verbatim=1, render_every=1)\n",
+    "    \n",
     "    #print(np.cumsum(reward_list)/(np.arange(n_episodes) + 1))\n",
     "    env.close()\n",
     "    return (reward_list, agent, env)"
